Alterção path img

--- a/faqs.html
+++ b/faqs.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -58,7 +58,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card" style="width: 100%;top: -50px;">
-          <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
+          <img src="img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Plataforma</h5>
           </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="col-md-3">
         <div class="card" style="width: 100%;top: -50px;">
-          <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
+          <img src="img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Pagamentos</h5>
           </div>
@@ -74,7 +74,7 @@
       </div>
       <div class="col-md-3">
         <div class="card" style="width: 100%;top: -50px;">
-          <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
+          <img src="img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Faturação</h5>
           </div>
@@ -82,7 +82,7 @@
       </div>
       <div class="col-md-3">
         <div class="card" style="width: 100%;top: -50px;">
-          <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
+          <img src="img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Pagamentos Autorizados</h5>
           </div>
@@ -144,7 +144,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
