--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -71,25 +71,25 @@
 
     <div class="row" style="padding-top: 100px;padding-bottom: 100px;">
       <div class="col text-center">
-        <object data="dist/img/logo-axl.svg" type="image/svg+xml"></object>
+        <object data="img/logo-axl.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-caco.svg" type="image/svg+xml"></object>
+        <object data="img/logo-caco.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-ftp.svg" type="image/svg+xml"></object>
+        <object data="img/logo-ftp.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-hub.svg" type="image/svg+xml"></object>
+        <object data="img/logo-hub.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-insta.svg" type="image/svg+xml"></object>
+        <object data="img/logo-insta.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-proswim.svg" type="image/svg+xml"></object>
+        <object data="img/logo-proswim.svg" type="image/svg+xml"></object>
       </div>
       <div class="col text-center">
-        <object data="dist/img/logo-trimanta.svg" type="image/svg+xml"></object>
+        <object data="img/logo-trimanta.svg" type="image/svg+xml"></object>
       </div>
     </div>
   </div>
@@ -104,7 +104,7 @@
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="dist/img/cobrancas.png" alt="Agilize as suas Cobranças" />
+            <img src="img/cobrancas.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Agendamento de Cobranças Recorrentes
@@ -114,7 +114,7 @@
         </div>
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="dist/img/faturacao.png" alt="Agilize as suas Cobranças" />
+            <img src="img/faturacao.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">Faturação Automatizada</p>
             </div>
@@ -122,7 +122,7 @@
         </div>
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="dist/img/envio.png" alt="Agilize as suas Cobranças" />
+            <img src="img/envio.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Envio por Email e WhatsApp
@@ -133,7 +133,7 @@
 
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="dist/img/seguro.png" alt="Agilize as suas Cobranças" />
+            <img src="img/seguro.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Seguro e Confiável</p>
@@ -158,7 +158,7 @@
           Mais</button>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto p-2" src="dist/img/quem-webify.png"
+        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto p-2" src="img/quem-webify.png"
           alt="WEBIFY" />
       </div>
     </div>
@@ -174,32 +174,32 @@
     </div>
     <div class="row">
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image1.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image1.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Benefícios da Automatização de Faturação</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image2.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image2.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Facilidade de Uso da Plataforma</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image3.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image3.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Suporte ao Cliente e Recursos de Ajuda</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image4.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image4.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Tutoriais e Dicas</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
@@ -240,7 +240,7 @@
                 <td>
                   <div class="input-group">
                     <span class="input-group-text">
-                      <img src="dist/img/IconMail.svg" alt="Nome">
+                      <img src="img/IconMail.svg" alt="Nome">
                     </span>
                     <input type="email" class="form-control contact-input" id="emailnewsletter" name="emailnewsletter"
                       placeholder="Email" maxlength="100" required>
@@ -294,7 +294,7 @@
                 <div class="contact-titulo">Apoio por mensagem whatsapp</div>
                 <div class="contact-conteudo">
                   <span style="padding-right: 15px;">
-                    <img src="dist/img/IconWhatsapp.svg" alt="whatsapp">
+                    <img src="img/IconWhatsapp.svg" alt="whatsapp">
                   </span>
                   (+351) 928 250 829
                 </div>
@@ -305,7 +305,7 @@
                 <div class="contact-titulo">Telefone</div>
                 <div class="contact-conteudo">
                   <span style="padding-right: 15px;">
-                    <img src="dist/img/IconPhone.svg" alt="Telefone">
+                    <img src="img/IconPhone.svg" alt="Telefone">
                   </span>
                   (+351) 215 868 529
                 </div>
@@ -316,7 +316,7 @@
                 <div class="contact-titulo">Email</div>
                 <div class="contact-conteudo">
                   <span style="padding-right: 15px;">
-                    <img src="dist/img/IconMail.svg" alt="Email">
+                    <img src="img/IconMail.svg" alt="Email">
                   </span>
                   info@payandgo.pt
                 </div>
@@ -327,7 +327,7 @@
                 <div class="contact-titulo">Morada</div>
                 <div class="contact-conteudo" style="display:inline-flex;">
                   <span style="padding-right: 15px;">
-                    <img src="dist/img/IconLocation.svg" alt="Morada">
+                    <img src="img/IconLocation.svg" alt="Morada">
                   </span>
                   Rua da Arrábida, 68<br>
                   1250-034 Lisboa - Portugal
@@ -339,7 +339,7 @@
                 <div class="contact-titulo">Facebook</div>
                 <div class="contact-conteudo">
                   <span style="padding-right: 15px;">
-                    <img src="dist/img/IconFacebook.svg" alt="Facebook">
+                    <img src="img/IconFacebook.svg" alt="Facebook">
                   </span>
                   <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@PAY&GO</a>
                 </div>
@@ -358,7 +358,7 @@
                 <div class="col-md-6">
                   <div class="input-group mb-3">
                     <span class="input-group-text">
-                      <img src="dist/img/IconPerson.svg" alt="Nome">
+                      <img src="img/IconPerson.svg" alt="Nome">
                     </span>
                     <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" maxlength="100"
                       required>
@@ -367,7 +367,7 @@
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
                     <span class="input-group-text">
-                      <img src="dist/img/IconPhone.svg" alt="Telemovel">
+                      <img src="img/IconPhone.svg" alt="Telemovel">
                     </span>
                     <input type="text" class="form-control" id="telemovel" name="telemovel" placeholder="Contacto"
                       maxlength="20" required>
@@ -378,7 +378,7 @@
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
                     <span class="input-group-text">
-                      <img src="dist/img/IconMail.svg" alt="Nome">
+                      <img src="img/IconMail.svg" alt="Nome">
                     </span>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email" maxlength="100"
                       required>
@@ -387,7 +387,7 @@
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
                     <span class="input-group-text">
-                      <img src="dist/img/IconLightbulb.svg" alt="Nome">
+                      <img src="img/IconLightbulb.svg" alt="Nome">
                     </span>
                     <input type="text" class=" form-control" id="assunto" name="assunto" placeholder="Assunto"
                       maxlength="100" required>
@@ -398,7 +398,7 @@
                 <div class="col-md-12 ">
                   <div class="input-group mb-3">
                     <span class="input-group-text" style="display: flow;">
-                      <img src="dist/img/IconEdit.svg" alt="Mensagem">
+                      <img src="img/IconEdit.svg" alt="Mensagem">
                     </span>
                     <textarea class="form-control" id="mensagem" name="mensagem" rows="9" cols="50" maxlength="400"
                       placeholder="Mensagem"></textarea>
@@ -426,7 +426,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
