--- a/planos.html
+++ b/planos.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -48,7 +48,7 @@
     <div class="p-5 rounded-3 row align-items-md-stretch">
       <div class="row">
         <div class="p-5 col-md-6 col-sm-12 jumbo-logo-planos text-center">
-          <object class="img-fluid" width="450" data="dist/img/planos-pg-logo.svg" type="image/svg+xml"></object>
+          <object class="img-fluid" width="450" data="img/planos-pg-logo.svg" type="image/svg+xml"></object>
         </div>
         <div class="p-5 col-md-6 col-sm-12">
           <p class="h-20 jumbo-text-planos">
@@ -88,12 +88,12 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="titulo-azul text-center">O nosso compromisso</div>
+          <div class="titulo-azul text-center" style="padding-top: 40px;">O nosso compromisso</div>
         </div>
       </div>
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
-          <img height="250" src="dist/img/cobrancas.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/cobrancas.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">
               Agendamento de Cobranças Recorrentes
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="col">
-          <img height="250" src="dist/img/faturacao.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/faturacao.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Faturação Automatizada</p>
           </div>
@@ -113,7 +113,7 @@
           </p>
         </div>
         <div class="col">
-          <img height="250" src="dist/img/envio.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/envio.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">
               Envio de Cobranças por Email e WhatsApp.
@@ -126,7 +126,7 @@
         </div>
 
         <div class="col">
-          <img height="250" src="dist/img/liberdade.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/liberdade.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Liberdade total,
               sem fidelizações
@@ -138,7 +138,7 @@
         </div>
 
         <div class="col">
-          <img height="250" src="dist/img/controlo-fin.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/controlo-fin.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Mais controlo financeiro,
               menos stress</p>
@@ -149,7 +149,7 @@
         </div>
 
         <div class="col">
-          <img height="250" src="dist/img/clientes-mais.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/clientes-mais.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Clientes mais satisfeitos, relações mais duradouras</p>
             <p class="card-text" style="padding-bottom:5rem;">
@@ -159,7 +159,7 @@
         </div>
 
         <div class="col">
-          <img height="250" src="dist/img/crescimento.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/crescimento.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Crescimento do negócio sem aumentar o esforço</p>
             <p class="card-text" style="padding-bottom:5rem;">
@@ -169,7 +169,7 @@
         </div>
 
         <div class="col">
-          <img height="250" src="dist/img/seguro.png" alt="Agilize as suas Cobranças" />
+          <img height="250" src="img/seguro.png" alt="Agilize as suas Cobranças" />
           <div class="card-body">
             <p class="home-card-text">Simples de usar,
               seguro por natureza</p>
@@ -191,7 +191,7 @@
         <div class="col offset-md-3">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3" style="background-color:#F5F5F5;border-bottom:0;">
-              <img height="128" src="dist/img/plano-icone-trial.png" alt="Agilize as suas Cobranças" />
+              <img height="128" src="img/plano-icone-trial.png" alt="Agilize as suas Cobranças" />
             </div>
             <div class="card-body">
               <h3 class="card-title pricing-card-title">Plano Experimental</h3>
@@ -208,7 +208,7 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3" style="background-color:#F5F5F5;border-bottom:0;">
-              <img height="128" src="dist/img/plano-icone-complete.png" alt="Agilize as suas Cobranças" />
+              <img height="128" src="img/plano-icone-complete.png" alt="Agilize as suas Cobranças" />
             </div>
             <div class="card-body">
               <h3 class="card-title pricing-card-title">À sua medida</h3>
@@ -231,7 +231,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
