--- a/quemsomos.html
+++ b/quemsomos.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -68,7 +68,7 @@
       </div>
       <div class="col-md-5 p-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/quem-webify.png" alt="WEBIFY" />
+          src="img/quem-webify.png" alt="WEBIFY" />
       </div>
     </div>
   </div>
@@ -77,7 +77,7 @@
   <div class="container">
     <div class="row featurette">
       <div class="col-md-5 p-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="dist/img/alvo.png"
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/alvo.png"
           alt="WEBIFY" />
       </div>
       <div class="col-md-7 p-5">
@@ -87,8 +87,9 @@
           embaixadores dos nossos produtos.
           Ajudamos os nossos clientes a atingir os seus objectivos, a automatizar e optimizar os seus processos, por
           forma a libertar recursos para outras tarefas.
-          Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. Procuramos
-          responder aos requisitos mais ambiciosos e a acrescentar valor ao nossos clientes.
+          No ambiente empresarial acelerado de hoje, as estratégias eficazes de gestão ágil de projetos são mais
+          essenciais do que nunca. A WEBIFY procura constantemente metodologias ágeis,
+          responder a requisitos em constante mudança e a acrescentar valor às organizações dos seus clientes.
         </p>
       </div>
     </div>
@@ -101,12 +102,14 @@
         <p class="lead">
           A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
           A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
-          a lado e crescemos juntos. Estamos sempre em busca da melhoria contínua.
+          a lado e crescemos juntos.
+          Estamos sempre em busca da melhoria contínua.
+
         </p>
       </div>
       <div class="col-md-5 p-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/missao.png" alt="WEBIFY" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/missao.png"
+          alt="WEBIFY" />
       </div>
     </div>
   </div>
@@ -115,12 +118,13 @@
     <div class="row featurette">
       <div class="col-md-5 p-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/codigo-fonte.png" alt="WEBIFY" />
+          src="img/codigo-fonte.png" alt="WEBIFY" />
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">o que já foi implementado</div>
-        <p class="lead">Dispomos de um portfolio variado de produtos, para Gestão de Eventos, Cobranças,
-          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, plataforma que somos Tech Provider.
+        <p class="lead">Dispomos de um portfolio variado de produtos, a Gestão de Cobranças, Gestão de Eventos,
+          Gestão de pagamentos de sessões de carregamento Veículos Eléctricos, Campanhas de Marketing por WhatsApp,
+          sendo Tech Provider do WhatsApp.
         </p>
       </div>
     </div>
@@ -130,7 +134,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
