--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -62,8 +62,8 @@
     </div>
     <div class="row">
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image1.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image1.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Benefícios da Automatização de Faturação</p>
         <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
           carousel. This is the first
@@ -71,8 +71,8 @@
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image2.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image2.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Facilidade de Uso da Plataforma</p>
         <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
           carousel. This is the first
@@ -80,8 +80,8 @@
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image3.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image3.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Suporte ao Cliente e Recursos de Ajuda</p>
         <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
           carousel. This is the first
@@ -89,8 +89,8 @@
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
       <div class="col-sm-2 col-md-3">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/image4.png" alt="WEBIFY" width="100%" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/image4.png"
+          alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Tutoriais e Dicas</p>
         <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
           carousel. This is the first
@@ -104,7 +104,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
