--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand col-lg-3 me-0" href="index.html">
-          <img src="dist/img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
+          <img src="img/logo-payandgo.svg" alt="Agilize as suas Cobranças" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarspayandgo" aria-controls="navbarspayandgo" aria-expanded="false"
@@ -74,7 +74,7 @@
                   <div class="col-md-6">
                     <div class="input-group mb-3">
                       <span class="input-group-text">
-                        <img src="dist/img/IconPerson.svg" alt="Nome">
+                        <img src="img/IconPerson.svg" alt="Nome">
                       </span>
                       <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" maxlength="100"
                         required>
@@ -83,7 +83,7 @@
                   <div class="col-md-6">
                     <div class="input-group mb-3">
                       <span class="input-group-text">
-                        <img src="dist/img/IconPhone.svg" alt="Telemovel">
+                        <img src="img/IconPhone.svg" alt="Telemovel">
                       </span>
                       <input type="text" class="form-control" id="telemovel" name="telemovel" placeholder="Contacto"
                         maxlength="20" required>
@@ -94,7 +94,7 @@
                   <div class="col-md-6">
                     <div class="input-group mb-3">
                       <span class="input-group-text">
-                        <img src="dist/img/IconMail.svg" alt="Nome">
+                        <img src="img/IconMail.svg" alt="Nome">
                       </span>
                       <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                         maxlength="100" required>
@@ -103,7 +103,7 @@
                   <div class="col-md-6">
                     <div class="input-group mb-3">
                       <span class="input-group-text">
-                        <img src="dist/img/IconLightbulb.svg" alt="Nome">
+                        <img src="img/IconLightbulb.svg" alt="Nome">
                       </span>
                       <input type="text" class=" form-control" id="assunto" name="assunto" placeholder="Assunto"
                         maxlength="100" required>
@@ -114,7 +114,7 @@
                   <div class="col-md-12">
                     <div class="input-group mb-3">
                       <span class="input-group-text" style="display: flow;">
-                        <img src="dist/img/IconEdit.svg" alt="Mensagem">
+                        <img src="img/IconEdit.svg" alt="Mensagem">
                       </span>
                       <textarea class="form-control" id="mensagem" name="mensagem" rows="9" cols="50" maxlength="400"
                         placeholder="Mensagem"></textarea>
@@ -138,7 +138,7 @@
                   <div class="contact-titulo">Apoio por mensagem whatsapp</div>
                   <div class="contact-conteudo">
                     <span style="padding-right: 15px;">
-                      <img src="dist/img/IconWhatsapp.svg" alt="whatsapp">
+                      <img src="img/IconWhatsapp.svg" alt="whatsapp">
                     </span>
                     (+351) 928 250 829
                   </div>
@@ -149,7 +149,7 @@
                   <div class="contact-titulo">Telefone</div>
                   <div class="contact-conteudo">
                     <span style="padding-right: 15px;">
-                      <img src="dist/img/IconPhone.svg" alt="Telefone">
+                      <img src="img/IconPhone.svg" alt="Telefone">
                     </span>
                     (+351) 215 868 529
                   </div>
@@ -160,7 +160,7 @@
                   <div class="contact-titulo">Email</div>
                   <div class="contact-conteudo">
                     <span style="padding-right: 15px;">
-                      <img src="dist/img/IconMail.svg" alt="Email">
+                      <img src="img/IconMail.svg" alt="Email">
                     </span>
                     info@payandgo.pt
                   </div>
@@ -171,7 +171,7 @@
                   <div class="contact-titulo">Morada</div>
                   <div class="contact-conteudo" style="display:inline-flex;">
                     <span style="padding-right: 15px;">
-                      <img src="dist/img/IconLocation.svg" alt="Morada">
+                      <img src="img/IconLocation.svg" alt="Morada">
                     </span>
                     <table>
                       <tr>
@@ -189,7 +189,7 @@
                   <div class="contact-titulo">Facebook</div>
                   <div class="contact-conteudo">
                     <span style="padding-right: 15px;">
-                      <img src="dist/img/IconFacebook.svg" alt="Facebook">
+                      <img src="img/IconFacebook.svg" alt="Facebook">
                     </span>
                     <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@PAY&GO</a>
                   </div>
@@ -201,7 +201,7 @@
 
             <div class="col-md-4 p-3">
               <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                src="dist/img/contacto.png" alt="WEBIFY" />
+                src="img/contacto.png" alt="WEBIFY" />
 
             </div>
 
@@ -217,7 +217,7 @@
     <div class="container">
       <div class="row border-bottom">
         <div class="col-md-2">
-          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+          <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
