--- a/quemsomos.html
+++ b/quemsomos.html
@@ -63,6 +63,8 @@
       <div class="col-md-7 p-5">
         <p class="lead">Somos uma empresa tecnológica focada na utilização das mais recentes e avançadas tecnologias com
           o objectivo da automatização e desmaterialização de processos.
+        </p>
+        <p class="lead">
           A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
         </p>
       </div>
@@ -87,9 +89,11 @@
           embaixadores dos nossos produtos.
           Ajudamos os nossos clientes a atingir os seus objectivos, a automatizar e optimizar os seus processos, por
           forma a libertar recursos para outras tarefas.
+        </p>
+        <p class="lead">
           No ambiente empresarial acelerado de hoje, as estratégias eficazes de gestão ágil de projetos são mais
-          essenciais do que nunca. A WEBIFY procura constantemente metodologias ágeis,
-          responder a requisitos em constante mudança e a acrescentar valor às organizações dos seus clientes.
+          essenciais do que nunca. A WEBIFY através de metodologias ágeis, procura responder a requisitos em constante
+          mudança e acrescentar valor aos seus clientes.
         </p>
       </div>
     </div>
@@ -102,9 +106,10 @@
         <p class="lead">
           A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
           A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
-          a lado e crescemos juntos.
-          Estamos sempre em busca da melhoria contínua.
-
+          a lado e crescemos juntos.</p>
+        <p class="lead">
+          A nossa ambição é criar soluções eficazes por forma a optimizar os recursos disponíveis e estamos sempre em
+          busca da melhoria contínua.
         </p>
       </div>
       <div class="col-md-5 p-5">
@@ -122,9 +127,13 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">o que já foi implementado</div>
-        <p class="lead">Dispomos de um portfolio variado de produtos, a Gestão de Cobranças, Gestão de Eventos,
-          Gestão de pagamentos de sessões de carregamento Veículos Eléctricos, Campanhas de Marketing por WhatsApp,
-          sendo Tech Provider do WhatsApp.
+        <p class="lead">Dispomos de um portfolio variado de soluções e produtos:
+        <ul>
+          <li class="lead">Gestão de Cobranças e Facturação;</li>
+          <li class="lead">Gestão de Eventos;</li>
+          <li class="lead">Gestão carregamentos Veículos Eléctricos em Condomínios;</li>
+          <li class="lead">Campanhas de Marketing por WhatsApp (WhatsApp Tech Provider).</li>
+        </ul>
         </p>
       </div>
     </div>
