--- a/planos.html
+++ b/planos.html
@@ -93,91 +93,123 @@
       </div>
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
-          <img height="250" src="img/cobrancas.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">
-              Agendamento de Cobranças Recorrentes
-            </p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Faça o planeamento das Cobranças a efetuar antecipadamente.
-            </p>
+          <div class="card" style="border:0;">
+            <img src="img/cobrancas.png" alt="Agendamento de Cobranças Recorrentes" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Agendamento de Cobranças Recorrentes
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Faça o planeamento das Cobranças a efetuar antecipadamente.
+              </p>
+            </div>
           </div>
         </div>
         <div class="col">
-          <img height="250" src="img/faturacao.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Faturação Automatizada</p>
+
+          <div class="card" style="border:0;">
+            <img src="img/faturacao.png" alt="Faturação Automatizada" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Faturação Automatizada
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Envio da faura após boa cobrança sem demoras nem complicações.
+              </p>
+            </div>
           </div>
-          <p class="card-text" style="padding-bottom:5rem;">
-            Envio da faura após boa cobrança sem demoras nem complicações.
-          </p>
+
         </div>
         <div class="col">
-          <img height="250" src="img/envio.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">
-              Envio de Cobranças por Email e WhatsApp.
-            </p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Para maior facilidade e comodidade, o cliente poderá optar por receber os pedidos de pagamento por
-              WhatsApp.
-            </p>
+
+          <div class="card" style="border:0;">
+            <img src="img/envio.png" alt="Envio de Cobranças por Email e WhatsApp" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Envio de Cobranças por Email e WhatsApp
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Para maior facilidade e comodidade, o cliente poderá optar por receber os pedidos de pagamento por
+                WhatsApp.
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="col">
-          <img height="250" src="img/liberdade.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Liberdade total,
-              sem fidelizações
-            </p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Adira quando quiser e permaneça o tempo que entender ser útil para si.
-            </p>
+          <div class="card" style="border:0;">
+            <img src="img/icon_cadeado.png" alt="Liberdade total, sem fidelizações" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Liberdade total, sem fidelizações
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Adira quando quiser e permaneça o tempo que entender ser útil para si.
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="col">
-          <img height="250" src="img/controlo-fin.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Mais controlo financeiro,
-              menos stress</p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Saiba a todo o momento quem pagou ou não pagou. Tenha semopre a imagem fiel dos pagamentos efetuados.
-            </p>
+          <div class="card" style="border:0;">
+            <img src="img/icon_carteira.png" alt="Mais controlo financeiro, menos stress" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Mais controlo financeiro, menos stress
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Saiba a todo o momento quem pagou ou não pagou. Tenha semopre a imagem fiel dos pagamentos efetuados.
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="col">
-          <img height="250" src="img/clientes-mais.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Clientes mais satisfeitos, relações mais duradouras</p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Maior comodidade e facilidade nos pagamentos. O cliente paga sem deslocações desncessárias.
-            </p>
+          <div class="card" style="border:0;">
+            <img src="img/icon_smile.png" alt="Clientes mais satisfeitos, relações mais duradouras" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Clientes mais satisfeitos, relações mais duradouras
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Maior comodidade e facilidade nos pagamentos. O cliente paga sem deslocações desncessárias.
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="col">
-          <img height="250" src="img/crescimento.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Crescimento do negócio sem aumentar o esforço</p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              Serviço altamento escalável. Cresça ao seu ritmo.
-            </p>
+
+          <div class="card" style="border:0;">
+            <img src="img/icon_finanças.png" alt="Crescimento do negócio sem aumentar o esforço" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Crescimento do negócio sem aumentar o esforço
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                Serviço altamento escalável. Cresça ao seu ritmo.
+              </p>
+            </div>
           </div>
+
         </div>
 
         <div class="col">
-          <img height="250" src="img/seguro.png" alt="Agilize as suas Cobranças" />
-          <div class="card-body">
-            <p class="home-card-text">Simples de usar,
-              seguro por natureza</p>
-            <p class="card-text" style="padding-bottom:5rem;">
-              O nosso produto é simples, fácil de usar e personalizável, garantindo uma transição suave e sem problemas
-              para a sua equipa de gestão.
-            </p>
+
+          <div class="card" style="border:0;">
+            <img src="img/seguro.png" alt="Simples de usar, seguro por natureza" />
+            <div class="card-body">
+              <p class="card-text home-card-text">
+                Simples de usar, seguro por natureza
+              </p>
+              <p class="card-text" style="padding-bottom:5rem;">
+                O nosso produto é simples, fácil de usar e personalizável, garantindo uma transição suave e sem
+                problemas
+                para a sua equipa de gestão.
+              </p>
+            </div>
           </div>
+
         </div>
 
       </div>
