--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="img/cobrancas.png" alt="Agilize as suas Cobranças" />
+            <img src="img/cobrancas.png" alt="Agendamento de Cobranças Recorrentes" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Agendamento de Cobranças Recorrentes
@@ -114,7 +114,7 @@
         </div>
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="img/faturacao.png" alt="Agilize as suas Cobranças" />
+            <img src="img/faturacao.png" alt="Faturação Automatizada" />
             <div class="card-body">
               <p class="card-text home-card-text">Faturação Automatizada</p>
             </div>
@@ -122,7 +122,7 @@
         </div>
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="img/envio.png" alt="Agilize as suas Cobranças" />
+            <img src="img/envio.png" alt="Envio por Email e WhatsApp" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Envio por Email e WhatsApp
@@ -133,7 +133,7 @@
 
         <div class="col">
           <div class="card" style="border:0;">
-            <img src="img/seguro.png" alt="Agilize as suas Cobranças" />
+            <img src="img/seguro.png" alt="Seguro e Confiável" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Seguro e Confiável</p>
