Fundo quem somos

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -99,42 +99,44 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="row featurette">
-      <div class="col-md-7 p-5">
-        <div class="titulo-azul">Missão, visão e valores</div>
-        <p class="lead">
-          A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
-          A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
-          a lado e crescemos juntos.</p>
-        <p class="lead">
-          A nossa ambição é criar soluções eficazes por forma a optimizar os recursos disponíveis e estamos sempre em
-          busca da melhoria contínua.
-        </p>
-      </div>
-      <div class="col-md-5 p-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/missao.png"
-          alt="WEBIFY" />
+  <div class="contacto" style="padding: 0px;">
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-7 p-5">
+          <div class="titulo-azul">Missão, visão e valores</div>
+          <p class="lead">
+            A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
+            A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
+            a lado e crescemos juntos.</p>
+          <p class="lead">
+            A nossa ambição é criar soluções eficazes por forma a optimizar os recursos disponíveis e estamos sempre em
+            busca da melhoria contínua.
+          </p>
+        </div>
+        <div class="col-md-5 p-5">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/missao.png"
+            alt="WEBIFY" />
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container">
-    <div class="row featurette">
-      <div class="col-md-5 p-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="img/codigo-fonte.png" alt="WEBIFY" />
-      </div>
-      <div class="col-md-7 p-5">
-        <div class="titulo-azul">o que já foi implementado</div>
-        <p class="lead">Dispomos de um portfolio variado de soluções e produtos:
-        <ul>
-          <li class="lead">Gestão de Cobranças e Facturação;</li>
-          <li class="lead">Gestão de Eventos;</li>
-          <li class="lead">Gestão carregamentos Veículos Eléctricos em Condomínios;</li>
-          <li class="lead">Campanhas de Marketing por WhatsApp (WhatsApp Tech Provider).</li>
-        </ul>
-        </p>
+    <div class="container">
+      <div class="row featurette">
+        <div class="col-md-5 p-5">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+            src="img/codigo-fonte.png" alt="WEBIFY" />
+        </div>
+        <div class="col-md-7 p-5">
+          <div class="titulo-azul">o que já foi implementado</div>
+          <p class="lead">Dispomos de um portfolio variado de soluções e produtos:
+          <ul>
+            <li class="lead">Gestão de Cobranças e Facturação;</li>
+            <li class="lead">Gestão de Eventos;</li>
+            <li class="lead">Gestão carregamentos Veículos Eléctricos em Condomínios;</li>
+            <li class="lead">Campanhas de Marketing por WhatsApp (WhatsApp Tech Provider).</li>
+          </ul>
+          </p>
+        </div>
       </div>
     </div>
   </div>
